--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 
 h1 {
     font-size: 81px;
-    font-weight: 700;
+    font-weight: 500;
 }
 
 h2 {
@@ -59,6 +59,7 @@ p {
     padding-bottom: 50px;
     text-shadow: 4px 3px 13px rgba(0, 0, 0, 0.7);
     color: #FFF;
+    font-family: 'Roboto', sans-serif;
 }
 
 .btn-outline {
