--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ p {
 
 .hero {
     padding: 30px 60px;
-    background: linear-gradient(0deg, rgba(0, 11, 51, 0.7), rgba(0, 11, 51, 0.7)), url(../assets/hero-background-image.png);
+    background: linear-gradient(0deg, rgba(0, 11, 51, 0.7), rgba(0, 11, 51, 0.7)), url(../assets/hero-background-image.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
